@@ -491,6 +491,7 @@ try
 		let tfilters = [
 			Codegen.fix_overrides com;
 		] in
+		let filters = (match com.platform with Js | Php | Cpp -> Optimizer.sanitize :: filters | _ -> filters) in
 		let filters = (if not com.foptimize then filters else Optimizer.reduce_expression ctx :: filters) in
 		Codegen.post_process com filters tfilters;
 		if Common.defined com "dump" then Codegen.dump_types com;
