@@ -40,6 +40,7 @@
 	all : improved completion with lambda function
 	as3 : several generation fixes
 	all : bugfix haxe.rtti.Generic on private class
+	php/js/cpp : sanitize binary expressions to prevent inlining errors
 
 2009-07-26: 2.04
 	flash9 : fixed get_full_path error with -D fdb
